src/test/deca/context/valid/ContextSansObjet/OperationsBooleennes/EqNullNull.deca
//Description
//  Test d'égalité entre deux null
//
//Réponse
//  ok
{
    null == null;
}