src/test/deca/context/invalid/ContextSansObjet/Identification/booleanNullAssign.deca
//Description
//  Assignation d'une variable boolean avec null
//
//Réponse
//  Erreur contextuelle ligne 10
//  type incompatible

{
    boolean x;
    x = null;
}